k8chart/templates/gwas-curation-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: curation-ui-ingress
  namespace: gwas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /gwas/depo-curation/$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host:
      http:
        paths:
          - path: /gwas/depo-curation(/|$)(.*)
            backend:
              serviceName: gwas-curation-ui
              servicePort: 80
